app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/* universal */

body {
  font-family: sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #555555;
  background-color: #ffffff;
  margin-bottom: 60px;
}

a {
  color: #20689B;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  text-align: left;
  color: #4d4d4d;
  font-family: 'Open Sans', sans-serif;
      margin-bottom: 0px;
    margin-top: 7px;
    font-weight: 100;
}


h1.intro {
  font-size: 3em;
  letter-spacing: -2px;
  text-align: left;
  color: #ffffff;
  font-family: 'Open Sans', sans-serif;
  margin-bottom: 0px;
  margin-top: 7px;
}

h2 {
  font-size: 1.6em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: left;
  font-weight: normal;
  color: #204060;
}

h3 {
margin-bottom: 0px;
    font-size: 2em;
    font-weight: lighter;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

/*
 * Base structure
 */

/* Move down content because we have a fixed navbar that is 50px tall */



/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 0px;
  border-bottom: 1px solid #eee;
}


/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    top: 0px;
    bottom: 0;
    left: 0;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #ffffff;
    border-right: 0px;
  }

  .header {
    background-color: #ffffff;
    position: relative;
    top: -5px;
    left: -20px;
  }
  .header a {
    color: #32374B;
    font-family: 'Quicksand', sans-serif;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 5px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 10px;
  font-size: 16px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  text-decoration: underline;
}

.nav-sidebar > .active > a:hover {

}

.nav-pills > li.active > a {
    color: #fff;
    background-color: #20689B;
        text-decoration: none;


}



/*
 * Main content
 */

.main {
  padding: 20px;
  border: 2px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
    padding-top: 10px;
  }
}
.main .page-header {
  margin-top: 0;
}

.page-header small {
  font-size: 18px;
  letter-spacing: 1.2px;
  font-weight: lighter;
}


/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}

footer {
  position: absolute;
  z-index: 1000;
  bottom: 0;
  width: 100%;
  position: fixed;
  height: 40px;
  background-color: #ecf2f9;
}

footer a{
    color: #222;
}

footer a:hover{
    color: #32374B;
    text-decoration: underline;
}
.social:hover {
     -webkit-transform: scale(1.0);
     -webkit-transition-duration: 0.5s;
 }
 .social {
     -webkit-transform: scale(0.8);
     color: #222;

 }

 footer ul.footerright{
        margin-right: 20px;
        margin-top: 10px;
    }
    footer ul.footerright li{
        display: inline;
        margin-right: 25px;
    }

 footer ul.footerleft{
        margin-left: 20px;
        margin-top: 10px;
    }
    footer ul.footerleft li{
        display: inline;
        margin-left: 25px;
    }



.container .text-muted {
  margin: 20px 0;
}

.table > thead > tr > th {
    vertical-align: bottom;
    border-bottom: 2px solid #ddd;
    background-color: #204060;
    color: #ffffff;
    font-size: 16px;
    text-shadow: 0 0 1px rgba(0,0,0,0.3);
}

.navbar-collapse.collapse {
    display: block !important;
    height: auto !important;
    padding-bottom: 0;
    overflow: visible !important;
    background-color: #204060;
}

.navbar-collapse.collapse a {
    color: #ffffff;
}

.navbar-collapse.collapse a:hover {
    color: #ffffff;
    background-color: #204060;
    text-decoration: underline;
}

.navbar-nav > .footer > li > a {
  padding-top: 200px;
  font-size: 1px;
  }

.nav-sidebar-sub > li > a {
    padding-left: 50px;
}

.nav-sidebar > li > a {
    padding-left: 36px;
}

.nav-sidebar-sub-sub > li > a {
    padding-left: 80px;
}

.nav-sidebar-sub-sub-sub > li > a {
    padding-left: 100px;
}


.nav-sidebar-sub > li.active > a, .nav-sidebar-sub > li.active > a:focus {
    color: #20689B;
    font-family: 'Arimo', sans-serif;
    background-color: #fff;
}


.header-icon {
    position: absolute;
    z-index: 1;
    margin-left: 25px;
    margin-top: 10px;
    color: #204060;
    }

.sub-header-icon {
    position: absolute;
    z-index: 1;
    margin-left: 55px;
    margin-top: 10px;
    color: #204060;
    }

.sub-sub-header-icon {
    position: absolute;
    z-index: 1;
    margin-left: 75px;
    margin-top: 10px;
    color: #204060;
    }


.container-fluid {
  margin-right: auto;
  margin-left: auto;
  padding-left: 0px;
  padding-right: 0px;

}

.page-container {
  text-align: center;
}

.container-form {
  background-color: #ffffff;
  min-height: 100%;
  box-shadow: 0 2px 8px #204060;
  padding: 1px 40px 40px 40px;
  max-width: 400px;
  margin: 0 auto;
  display: inline-block;
}

.container-form > h2 {
  text-align: center;
}

.container-form .form_input {
  padding: 0 20px 0 20px;
  display: block;
  margin: 0 auto;
}

@media (min-width: 992px) {
.container {
    width: 1100px;
}
}

.table-responsive {
    overflow-x: visible;
    }

.carousel {
  height: 400px;
  margin-bottom: 20px;

}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
  position:absolute;
  /*transparent overlay: */
  /*background: rgba(255,255,255,.5);*/
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 400px;
  background-color: #777;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 400px;
}

@media (min-width: 768px) {
.sidebar {
    top: 0px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 30px;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #ffffff;
}
}
.row2 > div {
    border-right: thin double #cccccc;
 }

.row {
    height: 40px;
    padding:8px;
    text-align:left;
    vertical-align:middle;
    font-weight:300;
    font-size:16px;
    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
    margin: 0px 0px 0px 0px;
}

 .navbar-default {
    background-color: #d9d9d9;
    border-color: #e7e7e7;
}

.nav-header-sub {
  font-size: 17px;
  padding: 10px;
  padding-left: 60px;
}

.nav-header{
  padding: 10px;
}

.nav-sub-header{
  padding: 10px;
  padding-left: 60px;
}

table#stream_fencing_form td {
  padding: 4px;
  padding-right: 40px;
}

.bmp_form {
  margin-left: 14px;
}

table#stream_fencing_form input {
  width: 75px;
  }

table#stream_stable_form input {
  width: 75px;
  }
table#stream_stable_form td {
  padding: 2px;

}

table#riparian_form input {
  width: 75px;
  }
table#riparian_form td {
  padding: 2px;

}

table#filter_form input {
  width: 75px;
  }
table#filter_form td {
  padding: 2px;

}
table#waterway_form input {
  width: 75px;
  }
table#waterway_form td {
  padding: 2px;

}

.undo {
  color: #20689B;
}

table.results_table {
border-spacing: 10px;
    border-collapse: separate;
}

table.results_table th {
  padding: 4px;
  font-size: 16px;
  border-bottom: thin solid #cccccc;
}

table.results_table td {
  padding: 4px;
  font-size: 16px;

}

.btn-header, .btn-header:hover {
    background: #204060;
    color: #ffffff;
}

.btn {
font-size: 16px;
}

.page-header small {
    font-size: 25px;
    letter-spacing: 1.2px;
}

.nav-sidebar-sub > li.active > a {
    color: #204060;
    background-color: #eeeeee;
        text-decoration: none;


}

.nav-sidebar-sub-sub > li.active > a {
    color: #204060;
    background-color: #eeeeee;
        text-decoration: none;


}

.nav-sidebar-sub-sub-sub > li.active > a {
    color: #204060;
    background-color: #eeeeee;
        text-decoration: none;


}
.language {
    position: relative;
    display: inline-block;
    color: #222;
}

.language .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: #204060;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;

    /* Position the tooltip */
    position: absolute;
    z-index: 1;
    bottom: 100%;
    left: 50%;
    margin-left: -60px;
}

.language .tooltiptext a {
    color: #fff;

}


.language:hover .tooltiptext {
    visibility: visible;
}

.button_to,
.button_to div {
  display: inline;
}

label {
    display: inline-block;
    max-width: 100%;
    margin-bottom: 5px;
    font-weight: normal;
}

#left_button {
  float: left;
}

#right_button {
  float: right;
}

.button_container {
  text-align: center;
  width: 192px;
  padding-top: 10px;
  margin: 0 auto;
}

